# fastapi-production-template

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  compose.yml  pyproject.toml
.github/workflows/: ci.yml  tests.yml  tox.yml
alembic/: env.py
alembic/versions/: 20260402_0001_create_documents.py
infra/terraform-aws/: main.tf  outputs.tf  variables.tf
infra/terraform-azure/: main.tf  outputs.tf  variables.tf
infra/terraform-gcp/: main.tf  outputs.tf  variables.tf
scripts/: docs_smoke.sh  terraform_fmt_check.py
src/fastapi_production_template/: __init__.py  main.py
src/fastapi_production_template/api/: auth.py
src/fastapi_production_template/api/v1/: router.py
src/fastapi_production_template/core/: logging.py  settings.py
src/fastapi_production_template/db/: __init__.py  engine.py  models.py  repository.py  session.py
src/fastapi_production_template/domain/: models.py
src/fastapi_production_template/middleware/: request_id.py
src/fastapi_production_template/observability/: metrics.py
src/fastapi_production_template/services/: document_service.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_db_engine.py  test_document_service.py  test_logging_and_lifespan.py
